src/main/java/com/hao/parser/HaoQLParser.java
/* Generated By:JavaCC: Do not edit this line. HaoQLParser.java */
package com.hao.parser;

import com.hao.parser.statement.*;

import java.util.ArrayList;
import java.util.LinkedHashMap;
import java.util.List;

public class HaoQLParser implements HaoQLParserConstants {
    Statement initParser() throws ParseException, TokenMgrError {
        return init();
    }

//SPECIAL_TOKEN : {<COMMENT:("#")+(<DIGIT>|<LETTER>|" ")*("#")+>}

    /*表名语法，单个字母或者字母开头带数字的串*/
    final public Token TableName() throws ParseException {
        Token T;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case LETTER:
                T = jj_consume_token(LETTER);
            {
                if (true) return T;
            }
            break;
            case NUMERAL:
                T = jj_consume_token(NUMERAL);
            {
                if (true) return T;
            }
            break;
            default:
                jj_la1[0] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }

    /*属�?�名语法，同表名语法*/
    final public Token AttributeName() throws ParseException {
        Token T;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case LETTER:
                T = jj_consume_token(LETTER);
            {
                if (true) return T;
            }
            break;
            case NUMERAL:
                T = jj_consume_token(NUMERAL);
            {
                if (true) return T;
            }
            break;
            default:
                jj_la1[1] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }

    /*列名，表�?.属�?�名*/
    final public Token ColumnName() throws ParseException {
        Token T;
        Token S = null;
        T = TableName();
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case DOT:
                jj_consume_token(DOT);
                S = AttributeName();
                break;
            default:
                jj_la1[2] = jj_gen;
                ;
        }
        if (S != null) {
            T.image = T.image + "." + S.image;
        }
        {
            if (true) return T;
        }
        throw new Error("Missing return statement in function");
    }

    /*字符串常�?*/
    final public String Literal() throws ParseException {
        Token T;
        StringBuilder sb = new StringBuilder();
        jj_consume_token(QUOTE);
        label_1:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case DIGIT:
                case LETTER:
                case LPAREN:
                case RPAREN:
                case COMMA:
                case DOT:
                    ;
                    break;
                default:
                    jj_la1[3] = jj_gen;
                    break label_1;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case DIGIT:
                    T = jj_consume_token(DIGIT);
                    sb.append(T.image);
                    break;
                case LETTER:
                    T = jj_consume_token(LETTER);
                    sb.append(T.image);
                    break;
                case LPAREN:
                    T = jj_consume_token(LPAREN);
                    sb.append(T.image);
                    break;
                case RPAREN:
                    T = jj_consume_token(RPAREN);
                    sb.append(T.image);
                    break;
                case COMMA:
                    T = jj_consume_token(COMMA);
                    sb.append(T.image);
                    break;
                case DOT:
                    T = jj_consume_token(DOT);
                    sb.append(T.image);
                    break;
                default:
                    jj_la1[4] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        jj_consume_token(QUOTE);
        {
            if (true) return sb.toString();
        }
        throw new Error("Missing return statement in function");
    }

    /*主语法分析，�?条HaoQL可以是以下形�?*/
    final public Statement init() throws ParseException {
        Statement stmt = null;
        label_2:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CREATE:
                case DROP:
                case SELECT:
                case INSERT:
                case UPDATE:
                case DELETE:
                    ;
                    break;
                default:
                    jj_la1[5] = jj_gen;
                    break label_2;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CREATE:
                    stmt = CreateStatement();
                    break;
                case DROP:
                    stmt = DropStatement();
                    break;
                case SELECT:
                    stmt = SelectStatement();
                    break;
                case INSERT:
                    stmt = InsertStatement();
                    break;
                case DELETE:
                    stmt = DeleteStatement();
                    break;
                case UPDATE:
                    stmt = UpdateStatement();
                    break;
                default:
                    jj_la1[6] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        jj_consume_token(0);
        {
            if (true) return stmt;
        }
        throw new Error("Missing return statement in function");
    }

    /*创建语句语法create <tname> (属�?�名 类型,...)�?'属�?�名 类型,...'作为子语�?*/
    final public Statement CreateStatement() throws ParseException {
        Token T;
        Statement stmt;
        LinkedHashMap<String, String> attributes;
        jj_consume_token(CREATE);
        T = TableName();
        jj_consume_token(LPAREN);
        attributes = AttrTypeList();
        jj_consume_token(RPAREN);
        stmt = new CreateStatement(T.image, attributes);
        {
            if (true) return stmt;
        }
        throw new Error("Missing return statement in function");
    }

    final public LinkedHashMap AttrTypeList() throws ParseException {
        Token AName;
        Token AType;
        LinkedHashMap<String, String> var = new LinkedHashMap<String, String>();
        AName = AttributeName();
        AType = jj_consume_token(DATATYPE);
        var.put(AName.image, AType.image);
        label_3:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LETTER:
                case NUMERAL:
                case COMMA:
                    ;
                    break;
                default:
                    jj_la1[7] = jj_gen;
                    break label_3;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case COMMA:
                    jj_consume_token(COMMA);
                    break;
                default:
                    jj_la1[8] = jj_gen;
                    ;
            }
            AName = AttributeName();
            AType = jj_consume_token(DATATYPE);
            var.put(AName.image, AType.image);
        }
        {
            if (true) return var;
        }
        throw new Error("Missing return statement in function");
    }

    final public Statement DropStatement() throws ParseException {
        Token T;
        jj_consume_token(DROP);
        T = TableName();
        {
            if (true) return new DropStatement(T.image);
        }
        throw new Error("Missing return statement in function");
    }

    final public Statement DeleteStatement() throws ParseException {
        Token T;
        ArrayList<String> clause = null;
        jj_consume_token(DELETE);
        T = TableName();
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case WHERE:
                jj_consume_token(WHERE);
                clause = Condition();
                break;
            default:
                jj_la1[9] = jj_gen;
                ;
        }
        {
            if (true) return new DeleteStatement(T.image, clause);
        }
        throw new Error("Missing return statement in function");
    }

    final public Statement InsertStatement() throws ParseException {
        Token T;
        ArrayList<String> attr;
        List<List<String>> values;
        Statement stmt;
        jj_consume_token(INSERT);
        T = TableName();
        jj_consume_token(LPAREN);
        attr = AttrList();
        jj_consume_token(RPAREN);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case VALUES:
                values = tuples();
            {
                if (true) return new InsertStatement(T.image, attr, values);
            }
            break;
            case SELECT:
                stmt = SelectStatement();
            {
                if (true) return new InsertStatement(T.image, attr, (SelectStatement) stmt);
            }
            break;
            default:
                jj_la1[10] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }

    final public ArrayList<String> AttrList() throws ParseException {
        Token T;
        ArrayList<String> attr = new ArrayList<String>();
        T = AttributeName();
        attr.add(T.image);
        label_4:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case COMMA:
                    ;
                    break;
                default:
                    jj_la1[11] = jj_gen;
                    break label_4;
            }
            jj_consume_token(COMMA);
            T = AttributeName();
            attr.add(T.image);
        }
        {
            if (true) return attr;
        }
        throw new Error("Missing return statement in function");
    }

    final public List<List<String>> tuples() throws ParseException {
        Token T;
        List<String> tup;
        List<List<String>> values = new ArrayList<List<String>>();
        jj_consume_token(VALUES);
        jj_consume_token(LPAREN);
        tup = Values();
        jj_consume_token(RPAREN);
        values.add(tup);
        label_5:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case COMMA:
                    ;
                    break;
                default:
                    jj_la1[12] = jj_gen;
                    break label_5;
            }
            jj_consume_token(COMMA);
            jj_consume_token(LPAREN);
            tup = Values();
            jj_consume_token(RPAREN);
            values.add(tup);
        }
        {
            if (true) return values;
        }
        throw new Error("Missing return statement in function");
    }

    final public String Value() throws ParseException {
        Token T;
        String S;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case NULL:
                T = jj_consume_token(NULL);
            {
                if (true) return T.image;
            }
            break;
            case QUOTE:
                S = Literal();
            {
                if (true) return S;
            }
            break;
            case INTEGER:
                T = jj_consume_token(INTEGER);
            {
                if (true) return T.image;
            }
            break;
            case DIGIT:
                T = jj_consume_token(DIGIT);
            {
                if (true) return T.image;
            }
            break;
            default:
                jj_la1[13] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }

    final public List<String> Values() throws ParseException {
        String T;
        List<String> vals = new ArrayList<String>();
        T = Value();
        vals.add(T);
        label_6:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case COMMA:
                    ;
                    break;
                default:
                    jj_la1[14] = jj_gen;
                    break label_6;
            }
            jj_consume_token(COMMA);
            T = Value();
            vals.add(T);
        }
        {
            if (true) return vals;
        }
        throw new Error("Missing return statement in function");
    }

    final public Statement SelectStatement() throws ParseException {
        Token D = null;
        Statement stmt;
        ArrayList<String> selList;
        ArrayList<String> tabList;
        ArrayList<String> clause = null;
        Token O = null;
        jj_consume_token(SELECT);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case DISTINCT:
                D = jj_consume_token(DISTINCT);
                break;
            default:
                jj_la1[15] = jj_gen;
                ;
        }
        selList = selectList();
        jj_consume_token(FROM);
        tabList = tableList();
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case WHERE:
                jj_consume_token(WHERE);
                clause = Condition();
                break;
            default:
                jj_la1[16] = jj_gen;
                ;
        }
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case ORDERBY:
                jj_consume_token(ORDERBY);
                O = ColumnName();
                break;
            default:
                jj_la1[17] = jj_gen;
                ;
        }
        stmt = new SelectStatement(D, selList, tabList, clause, (O == null ? "" : O.image));
        {
            if (true) return stmt;
        }
        throw new Error("Missing return statement in function");
    }

    final public ArrayList<String> selectList() throws ParseException {
        ArrayList<String> subList;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case STAR:
                jj_consume_token(STAR);
            {
                if (true) return new ArrayList<String>() {{
                    add("*");
                }};
            }
            break;
            case LETTER:
            case NUMERAL:
                subList = selectSubList();
            {
                if (true) return subList;
            }
            break;
            default:
                jj_la1[18] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }

    final public ArrayList<String> selectSubList() throws ParseException {
        Token T;
        ArrayList<String> subList = new ArrayList<String>();
        T = ColumnName();
        subList.add(T.image);
        label_7:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case COMMA:
                    ;
                    break;
                default:
                    jj_la1[19] = jj_gen;
                    break label_7;
            }
            jj_consume_token(COMMA);
            T = ColumnName();
            subList.add(T.image);
        }
        {
            if (true) return subList;
        }
        throw new Error("Missing return statement in function");
    }

    final public ArrayList<String> tableList() throws ParseException {
        Token T;
        ArrayList<String> tabList = new ArrayList<String>();
        T = TableName();
        tabList.add(T.image);
        label_8:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case COMMA:
                    ;
                    break;
                default:
                    jj_la1[20] = jj_gen;
                    break label_8;
            }
            jj_consume_token(COMMA);
            T = TableName();
            tabList.add(T.image);
        }
        {
            if (true) return tabList;
        }
        throw new Error("Missing return statement in function");
    }

    final public String term() throws ParseException {
        Token T;
        String S;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case LETTER:
            case NUMERAL:
                T = ColumnName();
            {
                if (true) return T.image;
            }
            break;
            case QUOTE:
                S = Literal();
            {
                if (true) return S;
            }
            break;
            case INTEGER:
                T = jj_consume_token(INTEGER);
            {
                if (true) return T.image;
            }
            break;
            case DIGIT:
                T = jj_consume_token(DIGIT);
            {
                if (true) return T.image;
            }
            break;
            default:
                jj_la1[21] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        throw new Error("Missing return statement in function");
    }

    final public ArrayList<String> exp() throws ParseException {
        Token T;
        String S;
        ArrayList<String> expList = new ArrayList<String>();
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case LPAREN:
                T = jj_consume_token(LPAREN);
                expList.add(T.image);
                break;
            default:
                jj_la1[22] = jj_gen;
                ;
        }
        S = term();
        expList.add(S);
        label_9:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PLUS:
                case MINUS:
                case STAR:
                case SLASH:
                    ;
                    break;
                default:
                    jj_la1[23] = jj_gen;
                    break label_9;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PLUS:
                    T = jj_consume_token(PLUS);
                    expList.add(T.image);
                    S = term();
                    expList.add(S);
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case RPAREN:
                            T = jj_consume_token(RPAREN);
                            expList.add(T.image);
                            break;
                        default:
                            jj_la1[24] = jj_gen;
                            ;
                    }
                    break;
                case MINUS:
                    T = jj_consume_token(MINUS);
                    expList.add(T.image);
                    S = term();
                    expList.add(S);
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case RPAREN:
                            T = jj_consume_token(RPAREN);
                            expList.add(T.image);
                            break;
                        default:
                            jj_la1[25] = jj_gen;
                            ;
                    }
                    break;
                case STAR:
                    T = jj_consume_token(STAR);
                    expList.add(T.image);
                    S = term();
                    expList.add(S);
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case RPAREN:
                            T = jj_consume_token(RPAREN);
                            expList.add(T.image);
                            break;
                        default:
                            jj_la1[26] = jj_gen;
                            ;
                    }
                    break;
                case SLASH:
                    T = jj_consume_token(SLASH);
                    expList.add(T.image);
                    S = term();
                    expList.add(S);
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case RPAREN:
                            T = jj_consume_token(RPAREN);
                            expList.add(T.image);
                            break;
                        default:
                            jj_la1[27] = jj_gen;
                            ;
                    }
                    break;
                default:
                    jj_la1[28] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {
            if (true) return expList;
        }
        throw new Error("Missing return statement in function");
    }

    final public ArrayList<String> boolFactor() throws ParseException {
        Token T;
        ArrayList<String> S;
        ArrayList<String> cond = new ArrayList<String>();
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case LBRACKET:
                T = jj_consume_token(LBRACKET);
                cond.add(T.image);
                break;
            default:
                jj_la1[29] = jj_gen;
                ;
        }
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case 42:
                T = jj_consume_token(42);
                cond.add(T.image);
                break;
            default:
                jj_la1[30] = jj_gen;
                ;
        }
        S = exp();
        cond.addAll(S);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case LT:
                T = jj_consume_token(LT);
                cond.add(T.image);
                break;
            case GT:
                T = jj_consume_token(GT);
                cond.add(T.image);
                break;
            case EQ:
                T = jj_consume_token(EQ);
                cond.add(T.image);
                break;
            default:
                jj_la1[31] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        S = exp();
        cond.addAll(S);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case RBRACKET:
                T = jj_consume_token(RBRACKET);
                cond.add(T.image);
                break;
            default:
                jj_la1[32] = jj_gen;
                ;
        }
        {
            if (true) return cond;
        }
        throw new Error("Missing return statement in function");
    }

    final public ArrayList<String> boolTerm() throws ParseException {
        Token T;
        ArrayList<String> S;
        ArrayList<String> cond = new ArrayList<String>();
        S = boolFactor();
        cond.addAll(S);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case 43:
                T = jj_consume_token(43);
                cond.add(T.image);
                S = boolTerm();
                cond.addAll(S);
                break;
            default:
                jj_la1[33] = jj_gen;
                ;
        }
        {
            if (true) return cond;
        }
        throw new Error("Missing return statement in function");
    }

    final public ArrayList<String> Condition() throws ParseException {
        Token T;
        ArrayList<String> S;
        ArrayList<String> cond = new ArrayList<String>();
        S = boolTerm();
        cond.addAll(S);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case 44:
                T = jj_consume_token(44);
                cond.add(T.image);
                S = Condition();
                cond.addAll(S);
                break;
            default:
                jj_la1[34] = jj_gen;
                ;
        }
        {
            if (true) return cond;
        }
        throw new Error("Missing return statement in function");
    }

    final public Statement UpdateStatement() throws ParseException {
        Token T;
        LinkedHashMap<String, String> mp;
        ArrayList<String> condition;
        jj_consume_token(UPDATE);
        T = TableName();
        jj_consume_token(SET);
        mp = AttrValueMap();
        jj_consume_token(WHERE);
        condition = Condition();
        {
            if (true) return new UpdateStatement(T.image, mp, condition);
        }
        throw new Error("Missing return statement in function");
    }

    final public LinkedHashMap<String, String> AttrValueMap() throws ParseException {
        Token AttrName;
        String value;
        LinkedHashMap<String, String> mp = new LinkedHashMap();
        AttrName = AttributeName();
        jj_consume_token(EQ);
        value = Value();
        mp.put(AttrName.image, value);
        label_10:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case COMMA:
                    ;
                    break;
                default:
                    jj_la1[35] = jj_gen;
                    break label_10;
            }
            jj_consume_token(COMMA);
            AttrName = AttributeName();
            jj_consume_token(EQ);
            value = Value();
            mp.put(AttrName.image, value);
        }
        {
            if (true) return mp;
        }
        throw new Error("Missing return statement in function");
    }

    /**
     * Generated Token Manager.
     */
    public HaoQLParserTokenManager token_source;
    SimpleCharStream jj_input_stream;
    /**
     * Current token.
     */
    public Token token;
    /**
     * Next token.
     */
    public Token jj_nt;
    private int jj_ntk;
    private int jj_gen;
    final private int[] jj_la1 = new int[36];
    static private int[] jj_la1_0;
    static private int[] jj_la1_1;

    static {
        jj_la1_init_0();
        jj_la1_init_1();
    }

    private static void jj_la1_init_0() {
        jj_la1_0 = new int[]{0x1800000, 0x1800000, 0x0, 0x86a00000, 0x86a00000, 0x2f80, 0x2f80, 0x81800000, 0x80000000, 0x20000, 0x8200, 0x80000000, 0x80000000, 0x680000, 0x80000000, 0x4000, 0x20000, 0x40000, 0x1800000, 0x80000000, 0x80000000, 0x1e00000, 0x2000000, 0x0, 0x4000000, 0x4000000, 0x4000000, 0x4000000, 0x0, 0x20000000, 0x0, 0x0, 0x40000000, 0x0, 0x0, 0x80000000,};
    }

    private static void jj_la1_init_1() {
        jj_la1_1 = new int[]{0x0, 0x0, 0x1, 0x1, 0x1, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x200, 0x0, 0x0, 0x0, 0x0, 0x8, 0x0, 0x0, 0x200, 0x0, 0x1e, 0x0, 0x0, 0x0, 0x0, 0x1e, 0x0, 0x400, 0xe0, 0x0, 0x800, 0x1000, 0x0,};
    }

    /**
     * Constructor with InputStream.
     */
    public HaoQLParser(java.io.InputStream stream) {
        this(stream, null);
    }

    /**
     * Constructor with InputStream and supplied encoding
     */
    public HaoQLParser(java.io.InputStream stream, String encoding) {
        try {
            jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
        } catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source = new HaoQLParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 36; i++) jj_la1[i] = -1;
    }

    /**
     * Reinitialise.
     */
    public void ReInit(java.io.InputStream stream) {
        ReInit(stream, null);
    }

    /**
     * Reinitialise.
     */
    public void ReInit(java.io.InputStream stream, String encoding) {
        try {
            jj_input_stream.ReInit(stream, encoding, 1, 1);
        } catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source.ReInit(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 36; i++) jj_la1[i] = -1;
    }

    /**
     * Constructor.
     */
    public HaoQLParser(java.io.Reader stream) {
        jj_input_stream = new SimpleCharStream(stream, 1, 1);
        token_source = new HaoQLParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 36; i++) jj_la1[i] = -1;
    }
